18 Aug 2004  NEB code reorganization. All the routines involved in "path" 
             optimization are grouped into modules starting with "path_". 
             The output has been slightly restyled. 
             In the pwscf code (only) has been implemented a version of the 
             string method (calculation='smd') in which the path is represented 
             in Fourier components and the optimization procedure is done on 
             these components (still to be optimized, but working).
             BFGS: Interpolation of the "accepted" bfgs step disabled 
             (not yet safe). (CS)

17 Aug 2004  Initialization of startingpot in the "raman" case fixed 
             Documentation update (PG)

16 Aug 2004  The fix for the problem "PBE on hydrogen atom" (see commit 
             10-05-2004) has been moved from gradcorr.f90 to 
             lsda_functionals.f90 so that both pwscf and the atomic code
             share the same fix (C.S.)

13 Aug 2004  Documentation for Raman updated (PG)

11 Aug 2004  Manual update and cleanup (GB, PG). 
             Added RANLIB=echo to old Make.* (PG)

 9 Aug 2004  Support for mac-osx added (contributed by Pascal Thibaudeau)
             Extensive documentation update and reshuffling : pwdocs
             and cpdocs merged into Doc (PG)

 9-Aug-2004  NEB restart file modified again: with the current implementation 
             of quick-min pos_old and grad_old need not to be saved in the
             restart file. Logical variables for reset_vel and frozen images
             have been moved from "ENERGIES, POSITIONS AND GRADIENTS" to 
             "QUICK-MIN FIELDS". Old restart files can be easily converted
             removing in the "ENERGIES, POSITIONS AND GRADIENTS" field all 
             logical variables and removing all the "QUICK-MIN FIELDS".
             (C.S.)

 1 Aug 2004  same variable accessed from 2 different modules, some
             compilers complain, fixed (CC)
